# GroundCheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASES.md  demo_groundcheck_vs_rag.py  pyproject.toml
.claude/: SESSION_PROMPT.md
.github/workflows/: groundcheck-test.yml  publish-groundcheck.yml  workflow.yml
.groundcheck/: memory.db
benchmarks/: dataset.json  latency.py  latency_results.json  results.json  run.py
docs/: mcp-server.md
examples/: langchain_grounded_chain.py  openclaw_plugin.py  trust_aware_agent.py
groundcheck/: __init__.py  backends.py  cli.py  crt_rag.py  decay.py  fact_extractor.py  knowledge_extractor.py  ledger.py  lifecycle.py  llm_fact_extractor.py  ml_detector.py  neural_extractor.py  semantic_contradiction.py  semantic_matcher.py  trace_logger.py  trust_math.py  tuple_verifier.py  types.py  utils.py  verifier.py
groundcheck/data/: entity_taxonomy.json  verb_ontology.json
groundcheck_mcp/: __init__.py  server.py  storage.py
tests/: __init__.py  test_backends.py  test_benchmark_contradictions.py  test_compound_splitting.py  test_contradiction_aware.py  test_decay.py  test_fact_extraction.py  test_general_extraction.py  test_integration.py  test_knowledge_extraction.py  test_ledger.py  test_lifecycle.py  test_lifecycle_hooks.py  test_mcp_server.py  test_ml_detector.py  test_neural_extraction.py  test_neural_integration.py  test_pypi_installability.py  test_scored_detection.py  test_semantic_matcher.py  test_trace_logger.py  test_trust_math.py  test_trust_weighting.py  test_universal_extraction.py  test_verifier.py
